feat(security): refine and finalize authentication with JWT