@@ -1,6 +1,7 @@
 package com.joaovictorcmd.besalonapi.security.userdetails;
 
 import com.joaovictorcmd.besalonapi.entities.User;
+import com.joaovictorcmd.besalonapi.enums.UserRole;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
@@ -8,6 +9,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -23,10 +25,10 @@ public class UserDetailsImpl implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
 
-        String roleName = user.getRole().getRole();
-
-        return List.of(
-                new SimpleGrantedAuthority(roleName)
+        return Collections.singletonList(
+                new SimpleGrantedAuthority(
+                        String.valueOf(user.getRole())
+                )
         );
     }
 
